Fri Jan 17 17:55:48 2003  Owen Taylor  <otaylor@redhat.com>

	* metal_style.c (is_first_tab): Redo the computation
	of whether a tab is the first tab to avoid segfaults
	if the tab label isn't available, and also fix some
	bugs with pack-end tabs. (#79936, Peter Zelezny)

	* metal_style.c (draw_notebook_focus): Draw the
	notebook tab focus in a style similar to the way
	that the Java metal L&F does it ... use a polygon
	rather than a square.

	* metal_style.c (draw_extension): Remove code that
	was drawing a weird mid-gray box in the middle
	of the tab.

	* metal_style.c (metal_tab): Tweak to look less like
	something the cat dragged in, even if not exactly
	like the Java metal tabs.

Fri Jan 17 14:41:05 2003  Owen Taylor  <otaylor@redhat.com>

	* metal_style.c: Make parent_class static. (#94047,
	 Shivaram Upadhyayula)

2002-09-12  Havoc Pennington  <hp@redhat.com>

	* Theme/Makefile.am (theme_DATA): update Makefile to remove 
	ICON.png

Sun Apr 21 14:08:59 2002  Owen Taylor  <otaylor@redhat.com>

	* metal_style.c (reverse_engineer_stepper_box): Add a workaround
	for gtkrange brokeness with regards to drawing the stepper arrows.

2002-04-19  jacob berkman  <jacob@ximian.com>

	* metal_style.c (get_tab_status): cleanup a little to really fix
	
	* metal_style.c (get_tab_status): assign a variable before we use
	it

Sat Jan 19 20:56:26 2002  Owen Taylor  <otaylor@redhat.com>

	* *.[ch]: Rework using code from Raleigh and the capabilities
	of GTK+-2.0. Move code around. 

2000-02-13  Tor Lillqvist  <tml@iki.fi>

	* metal_theme_main.c: No need to include gdkx.h.

Fri Jun 11 Peter Wainwright <prw@wainpr.demon.co.uk>
       * metal_theme_main.c: Make sure event handlers are restored
       on theme_exit().

Wed Feb 24 20:11:50 1999  Tor Lillqvist  <tml@iki.fi>

	* metal_theme_draw.c: Declare fuzzy_match before use. Make it
 	static.

Thu Feb 11 22:36:38 1999  Owen Taylor  <otaylor@redhat.com>

	* metal_theme_draw.c (draw_box): Draw some box
	if widget == NULL.
