@@ -1,3 +1,9 @@
+Fri Jan 17 18:18:52 2003  Owen Taylor  <otaylor@redhat.com>
+
+	* metal_style.c (draw_notebook_focus): Account for
+	tab_hborder/tab_vborder. (Deprecated, but Glade 
+	sets it at a minimum.)
+
 Fri Jan 17 17:55:48 2003  Owen Taylor  <otaylor@redhat.com>
 
 	* metal_style.c (is_first_tab): Redo the computation
